--- a/css/styles.css
+++ b/css/styles.css
@@ -239,6 +239,7 @@ p.post-author {
 
 p.post-author img {
     width: 40px;
+    border: 1px solid #17678a;
     border-radius: 50%;
     margin-right: 5px;
 }
